<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pizza" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/bungee_shade"
            android:rotation="-30"
            android:text="@string/discount"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/choosePizzaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:gravity="end"
        android:text="@string/select_item"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/goodsImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/pizza_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/order_price"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/countTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="35dp"
            android:text="@string/count"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@id/priceTextView"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="80dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@id/priceTextView"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/priceLabel"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/countTextView"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimaryDark"
            android:onClick="decreaseQuantity"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@id/countTextView"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/minusButton"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/countTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/quantity"
            android:background="@color/colorPrimaryDark"
            android:onClick="increaseQuantity"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="addToCart"
        android:text="@string/add_to_card"
        android:textColor="@android:color/white" />
</LinearLayout>